// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`An InputRow Container renders component 1`] = `
<div>
  <div
    className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        aria-label="Add Item"
        className="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
        data-test-id="todo-add-item"
      >
        <label
          className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated"
          data-shrink={false}
          htmlFor="todoInput"
        >
          Add Item
        </label>
        <div
          className="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl"
          onClick={[Function]}
        >
          <input
            aria-invalid={false}
            className="MuiInputBase-input MuiInput-input"
            disabled={false}
            id="todoInput"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="text"
            value=""
          />
        </div>
      </div>
    </form>
  </div>
  <div
    className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
  >
    <div>
      <span>
        Show Done
      </span>
      <span
        className="MuiSwitch-root"
      >
        <span
          aria-disabled={false}
          aria-label="choose filter"
          className="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-170 MuiSwitch-switchBase MuiSwitch-colorPrimary"
          onBlur={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={null}
        >
          <span
            className="MuiIconButton-label"
          >
            <span
              className="MuiSwitch-thumb"
            />
            <input
              checked={false}
              className="PrivateSwitchBase-input-173 MuiSwitch-input"
              id="todoStateSwitch"
              onChange={[Function]}
              type="checkbox"
            />
          </span>
          <span
            className="MuiTouchRipple-root"
          />
        </span>
        <span
          className="MuiSwitch-track"
        />
      </span>
    </div>
  </div>
</div>
`;

exports[`An InputRow renders component 1`] = `
<div>
  <div
    className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        aria-label="Add Item"
        className="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
        data-test-id="todo-add-item"
      >
        <label
          className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated"
          data-shrink={false}
          htmlFor="todoInput"
        >
          Add Item
        </label>
        <div
          className="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl"
          onClick={[Function]}
        >
          <input
            aria-invalid={false}
            className="MuiInputBase-input MuiInput-input"
            disabled={false}
            id="todoInput"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="text"
            value=""
          />
        </div>
      </div>
    </form>
  </div>
  <div
    className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
  >
    <div>
      <span>
        Show Done
      </span>
      <span
        className="MuiSwitch-root"
      >
        <span
          aria-disabled={false}
          aria-label="choose filter"
          className="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-170 MuiSwitch-switchBase MuiSwitch-colorPrimary"
          onBlur={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={null}
        >
          <span
            className="MuiIconButton-label"
          >
            <span
              className="MuiSwitch-thumb"
            />
            <input
              checked={false}
              className="PrivateSwitchBase-input-173 MuiSwitch-input"
              id="todoStateSwitch"
              onChange={[Function]}
              type="checkbox"
            />
          </span>
        </span>
        <span
          className="MuiSwitch-track"
        />
      </span>
    </div>
  </div>
</div>
`;
